Sample APIs writing

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 spring.application.name=first-spring-app
+
+#by default tomcat runs on port 8080 but we can also change the port number
+server.port=7778
